Indico pasos de ejecución y la rama más actualizada